ive linked the database with js, but getting "TypeError: Cannot read property render of undefined" this needs to be fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -277,6 +277,9 @@ footer {
 .footerMain {
   margin-top: 25px; }
 
+.box {
+  display: none; }
+
 @media (max-width: 880px) {
   .footerMain {
     font-family: 'Merriweather Sans'; }
@@ -294,6 +297,9 @@ footer {
 
   .main {
     line-height: normal;
-    font-size: auto; } }
+    font-size: auto; }
+
+  #header {
+    justify-content: space-between; } }
 
 /*# sourceMappingURL=main.css.map */
