--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,28 +1,28 @@
 <!--Main Content-->
 
 <section id="infoCircles">
-        <h2 class="hidden">Info Circles</h2>
+        <h2 class="hidden">Product Info Circles</h2>
     <div class="circle">
-        <img src="../images/{{ContentOneImg}}.jpg" alt="" height="200px" width="200px">
+        <img src="../images/{{ContentOneImg}}" alt="" height="200px" width="200px">
         <h2>{{ContentOneHead}}</h2>
         <p>{{ContentOneParag}}</p>
     </div>
 
     <div class="circle">
-        <img src="../images/{{ContentTwoImg}}.jpg" alt="" height="200px" width="200px">
+        <img src="../images/{{ContentTwoImg}}" alt="" height="200px" width="200px">
         <h2>{{ContentTwoHead}}</h2>
         <p>{{ContentTwoParag}}</p>
     </div>
     
     <div class="circle">
-        <img src="../images/{{ContentThreeImg}}.jpg" alt="" height="200px" width="200px">
+        <img src="../images/{{ContentThreeImg}}" alt="" height="200px" width="200px">
         <h2>{{ContentThreeHead}}</h2>
         <p>{{ContentThreeParag}}</p>
     </div>
 </section>
 
 <section id="infoSquares">
-        <h2 class="hidden">Info Squares</h2>
+        <h2 class="hidden">Main Content</h2>
 
     <div class="square1 content">
         <div class="square1Text">
@@ -35,26 +35,27 @@
         </div>
     </div>
 
+    
     <div class="square2 content">
         <div class="square2Text">
-            <h2>{{ContentFourHead}}</h2>
-            <p>{{ContentFour}}</p>
+            <h2>{{ContentFivHead}}</h2>
+            <p>{{ContentFiveParag}}</p>
         </div>
 
         <div class="square2Image">
-            <img src="../images/{{ContentFourImg}}.jpg" alt="" height="500px" width="100%">
+            <img src="../images/{{ContentFiveImg}}.jpg" alt="" height="500px" width="100%">
         </div>
     </div>
 
     <div class=" hidden square2Desktop content">
 
             <div class="square2Image">
-                <img src="../images/{{ContentFiveImg}}.jpg" alt="" height="500px" width="100%">
+                <img src="../images/{{ContentFourImg}}.jpg" alt="" height="500px" width="100%">
             </div>
             
             <div class="square2Text">
-                <h2>{{ContentFiveHead}}</h2>
-                <p>{{ContentFiveParag}}</p>
+                <h2>{{ContentFourHead}}</h2>
+                <p>{{ContentFourParag}}</p>
             </div>
 
     </div>
