--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,8 +10,8 @@
 </head>
 <main>
     <header id="header">
-        <div class="box logo">
-            <img src="../images/logo_housecom.svg" alt="Company Logo" height="100%" width="100%">
+         <div class="box logo">
+            <img src="../images/logo_thermosecurity_symbol.svg" alt="Company Logo" height="100%" width="100%">
         </div>
 
         <div class="nav">
@@ -28,7 +28,10 @@
             </nav>
     
         </div>
-        <div class="hidden deskNav">           
+        <div class="hidden deskNav"> 
+            <div class="desk logo">
+                <img src="../images/logo_thermosecurity.svg" alt="Company Logo" height="100%" width="100%">
+            </div>          
             <nav id="desktopNav">
                 <ul style="list-style: none" class="links">
                     <li><a href="index.html">Home</a></li>
